# Souzoukougaku2018

./: .gitignore  CMakeLists.txt  connect_BBB.ps1  send_program.ps1
doc/: 4S_sample_motor.c  shmsample.c  ultrasonic_sample.c  【A】チームロボット仕様書2018.docx  プログラム開発に際して.pptx  作業計画表2018.xlsx  創造工学Tips集.docx  Ｌｉｎｕｘ使い方とＭａｋｅ.doc
program/: CMakeLists.txt
program/exe/: CMakeLists.txt  DCmotor_test.c  DCmotor_test.cpp  hello.cpp  line_tracer_test.cpp  test_run.cpp  test_run_2.cpp  ultrasonic_sensor_test.cpp
program/modules/: CMakeLists.txt
program/modules/control/: CMakeLists.txt
program/modules/control/include/control/: drive_motor.h  line_tracer.h
program/modules/control/src/: drive_motor.cpp  line_tracer.cpp
program/modules/structure/: CMakeLists.txt
program/modules/structure/include/structure/: DCMotor.h  LineTracer.h  dc_motor.h  drive_motor.h  line_sensor.h  line_tracer.h
program/modules/structure/src/: DCMotor.cpp  LineTracer.cpp  dc_motor.cpp  line_sensor.cpp  line_tracer.cpp
program/modules/util/: CMakeLists.txt
program/modules/util/include/util/: Console.h  Timer.hpp  timer.h  to_str.hpp
program/modules/util/src/: Console.cpp  timer.cpp
program_BBB/: CMakeLists.txt
program_BBB/exe/: CMakeLists.txt  DCmotor_test.cpp  hello.cpp  line_tracer_test.cpp  performance.cpp  tcp_test.cpp  test_run.cpp  ultrasonic_sensor_test.cpp
program_BBB/modules/structure/: CMakeLists.txt
program_BBB/modules/structure/include/structure/: actuators_manager.h  dc_motor.h  drive_motor.h  line_sensor.h  sensors_manager.h  servo_motor.h  socket_server.h  ultrasonic_sensor.h  using_pins.h
program_BBB/modules/structure/src/: actuators_manager.cpp  dc_motor.cpp  drive_motor.cpp  line_sensor.cpp  sensors_manager.cpp  servo_motor.cpp  socket_server.cpp  ultrasonic_sensor.cpp
program_BBB/modules/util/include/util/: timer.h
program_BBB/modules/util/src/: timer.cpp
